# PulseBench

./: .gitignore  CMakeLists.txt  LICENSE  README.md  V1.1.0Log.md  V1.2.0Log.md  V1.2.1Log.md  pulsebench-gui.spec
examples/: config_io.json  config_simd.json  example.sh
gui/: README.md  main.py  requirements.txt  run-gui.sh
include/: benchmark.hpp  perf_wrapper.hpp  stats.hpp  utils.hpp  workload.hpp  workload_registry.hpp  workloads.hpp
scripts/: build.bat  plot_results.py
src/: benchmark.cpp  main.cpp  perf_wrapper.cpp  stats.cpp  utils.cpp  workload_registry.cpp  workloads.cpp
tests/: test_stats.cpp
